--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
-
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/student_system?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.continue-on-error=true
 mybatis.mapper-locations=classpath:mappers/*.xml
-
-#×Ô¶¨ÒåÍ¼±ê
-spring.mvc.favicon.enabled = false
+#ï¿½Ô¶ï¿½ï¿½ï¿½Í¼ï¿½ï¿½
+spring.mvc.favicon.enabled=false
